--- a/app.json
+++ b/app.json
@@ -2,7 +2,6 @@
   "expo": {
     "name": "SenseTech",
     "slug": "SenseTech",
-    
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/multiple-sensor.gif",
@@ -25,7 +24,6 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      
       "expo-router",
       [
         "expo-splash-screen",
@@ -35,7 +33,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
